# robot-ai

./: .pre-commit-config.yaml  README.md  pyproject.toml
robot_ai/: constants.py  make_tea.py  tasks.py
robot_ai/lerobot_utils/: record.py  robot.py
robot_ai/tea_maker/: instructions.py  make_tea.py  mcp_server.py  mcp_tea_making_agent.py  tea_making_agent.py  tools.py
